--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Hux."
+description: "Hey, this is MSG."
 header-img: "img/about-bg.jpg"
 ---
 
@@ -17,11 +17,37 @@ header-img: "img/about-bg.jpg"
         多读书，读好书，多写笔记，完善自己。
         世界那么大，多去转转。
     </blockquote>
-    9月21日上午，阳光明媚，鲜花斗艳。帕洛阿尔托苹果店里欢声笑语，人头攒动。苹果公司首席执行官蒂姆·库克先生在店长欧阳猛南陪同下，不远千米，深入到一线店面，为那里的员工带去节曰的问候和良好的祝愿。<br><br>“果粉们，你们辛苦了，我代表某果公司，祝你们身体健康，生活幸福，工作成功！”库克亲切慰问广大员工和顾客，并就iOS7、iPhone 5S和iPhone 5C的销售状况进行调研。 <br><br>“您现在每月工资有多少？肾5S拿到了吗？”在店里，库克关切地向果粉们问起这一问题。当听说果粉们排到了5S，库克满意地连连点头。接着他指出，近年来苹果事业发展取得巨大成就，特别是iPhone影响剧增，老百姓对iOS满意度逐步提高，在这个转变过程中，果粉的辛勤工作功不可没。<br><br>库克看到一个中国小朋友在排队买iPhone 5S，亲切的问：“5288元一台能承受不？”小朋友回答到：“能！”当得知这位小朋友卖了一个肾来买iPhone 5S时，库克叮嘱道：“在支持苹果的同时，也要爱护身体。”<br><br>库克与购买苹果手机的果粉们兴致勃勃地参观了苹果专卖店，和员工们拉了拉家常，并饶有兴趣地玩了四盘切西瓜游戏，与普通员工同乐。<br><br>在交谈中，库克多次关心地强调：“有了iPhone 5C，就不卖iPhone 5了。”并对顾客说：“好好休息，身体是革命的本钱嘛！”会谈始终在亲切友好的气氛中进行。<br><br>顾客们就库克的讲话达成了广泛的共识，并承认世界上只有iOS最流畅，要紧紧的团结在以库克先生为首席执行官的苹果公司集体周围，一心一意抓学习，聚精会神谋发展。<br>
-    <br>帕洛阿尔托苹果专卖店当日原则通过《蒂姆·库克首席执行官在加州新苹果店的讲话纪要》，并下发各分店认真学习、研讨。
+    <br>写出这个题目的时候我也在问自己，</br>
+
+
+<br>读书的意义到底是什么？</br>
+
+<br>当然，人读书不是为了变好看的。</br>
+
+<br>更当然，也不是为了变有钱。</br>
+
+<br>在这两个可能出现的附加值之外，读书的意义是——</br>
+
+<br>来，听他们说：</br>
+
+<br>陈丹青：读书有两个作用，一是让我自以为非，一是让我有一间自己的房子，有内心的生活。</br>
+
+<br>伏尔泰：当我们第一遍读一本好书的时候，我们仿佛觉得找到了一个朋友；当我们再一次读这本好书的时候，仿佛又和老朋友重逢。</br>
+
+<br>茨威格：一个人和书籍接触得愈亲密，他便愈加深刻地感到生活的统一，因为他的人格复化了，他不仅用他自己的眼睛观察，而且运用着无数心灵的眼睛，由于他们这种崇高的帮助，他将怀着挚爱的同情踏遍整个世界。</br>
+
+<br>毕淑敏：书不是胭脂，却会使女人心颜常驻。书不是棍棒，却会使女人铿锵有力。书不是羽毛，却会使女人飞翔。书不是万能的，却会使女人千变万化。</br>
+
+<br>网友：读书会让你内心笃定却又不会过于固执，它能让你看见他人眼中的世界，也能让你清楚的知晓自己。</br>
+
+<br>另一个网友：长期读书的人会明显不同——公众场合偏于安静，发言时直戳重点，逻辑清晰；做起事情专注度高，不会大声吵闹；学习能力强，接受新事物更快。</br>
+
+<br>在我看来，读书，不是为了读文字背句子讲段子，而是为了理解思想整理思维启发思考。读得再快背得再熟，你也不过是台复读机，只有通过原本读出自己，哪怕是浅陋的自己，你才能体会到阅读的真益。</br>
+
+<br>读书越少对环境越不满；读书越多对自己越不满意。读书少的人，看问题越主观，越简单，越容易对什么都抱怨。书读多了，眼界开阔了，分析思考问题的能力提高了，特别是从前人的经验与分析中，增加了自己对复杂问题的判断能力，知道怎样看问题，更知道自己的短处在哪里。抱怨什么，便知读书多少。</br>
 
     <p style="text-align:right;">
-        —— <a href="http://www.zhihu.com/question/19687065">李书航 － 什么是「共产中文腔调」？ </a>
+        —— <a href="https://www.jianshu.com/p/db59540b3250">王少挺 - 读书，是为了什么？ </a>
     </p>
 
 </div>
